# mandor

./: .editorconfig  .gitignore  CMakeLists.txt  PeriodicBoundaryConditions.cpp  PeriodicBoundaryConditions.h  README.md  Untitled-1.nb  em.cpp  em.h  main_test.cpp  mandor.sln  mandor.vcxproj  mandor.vcxproj.filters  planeWave.cpp  planeWave.h  plot.py  testConstMacros.h  type_mesh.cpp  type_mesh.h  type_mesh2.cpp  type_mesh2.h  type_reg.cpp  type_reg.h  type_vector.cpp  type_vector.h
Debug/: Sample-Test1.exe.gta.testdurations  Sample-Test1.ilk  Test.exe.gta.testdurations  Test.ilk  easylogging++.nativecodeanalysis.xml  mandor.ilk  type_reg.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml
Debug/mandor.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mandor.lastbuildstate
doc/: Google C++ Style Guide.html  Project_CLion.xml  Zeh's coding style.md  codestyle.md
doc/Google C++ Style Guide_files/: styleguide.js
easylogging/: easylogging++.cc
src/: .editorconfig  PeriodicBoundaryConditions.cpp  PeriodicBoundaryConditions.h  README  em.cpp  em.h  log.h  main.cpp  planeWave.cpp  planeWave.h  testConstMacros.h  type_mesh.cpp  type_mesh.h  type_mesh2.cpp  type_mesh2.h  type_reg.cpp  type_reg.h  type_vector.cpp  type_vector.h  type_vector2.h
src/easylogging/: easylogging++.cc
src/yaml/: initCondit.cpp  initCondit.h
x64/Debug/: vc141.idb
x64/Debug/mandor.tlog/: mandor.lastbuildstate
